--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>program5</name>
+	<name>CSS430-FinalProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
